# SydGame

./: README.md
app/: build.gradle
app/src/androidTest/java/com/sydauto/game/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  common.hpp  game_consts.h  native_engine.cpp  native_engine.h  our_key_codes.hpp
app/src/main/cpp/data/: cube_geom.inl  strings.inl  tunnel_geom.inl
app/src/main/cpp/engine/: engine.h
app/src/main/cpp/render/: shape_render.cpp  shape_render.h  text_render.cpp  text_render.h
app/src/main/cpp/scene/: anim.cpp  anim.h  dialog_scene.cpp  dialog_scene.h  play_scene.cpp  play_scene.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  ui_scene.cpp  ui_scene.h  welcome_scene.cpp  welcome_scene.h
app/src/main/cpp/shader/: our_shader.cpp  our_shader.h  shader.cpp  shader.h
app/src/main/cpp/utils/: ascii_to_geom.cpp  ascii_to_geom.h  indexbuf.cpp  indexbuf.h  obstacle.cpp  obstacle.h  obstacle_generator.cpp  obstacle_generator.h  sfxman.cpp  sfxman.h  simplegeom.h  util.cpp  util.h  vertexbuf.cpp  vertexbuf.h
app/src/main/cpp/view/: input_util.cpp  input_util.h  joystick-support.h  tex_quad.cpp  tex_quad.h  texture.cpp  texture.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/sydauto/game/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
